release 0.8 (2008-06-20 or 2008-07-25)
- The container SPI is improved and simplified, see JavaDoc of:
    com.sun.jersey.spi.container.ContainerRequest
    com.sun.jersey.spi.container.InBoundHeaders
    com.sun.jersey.spi.container.ContainerResponse
    com.sun.jersey.spi.container.ContainerWriter
- Removed WebApplication.addInjectable, use the following instead:
    ResourceConfig.getProviderInstances().add()
- Instances of provider classes can be declared by the application by adding
  provider instances to the Set returned by the method:
    ResourceConfig.getProviderInstances()
- Modified com.sun.jersey.spi.container.{AbstractContainerRequest, 
  AbstractContainerResponse} to take WebApplication as an input parameter
  as opposed to previously taking MessageBodyContext.
- Removed com.sun.jersey.spi.container.MessageBodyContext, this is replaced
  by javax.ws.rs.ext.MessageBodyWorkers.
- com.sun.jersey.api.uri.ExtendedUriInfo can be injected.
- The annotation com.sun.jersey.api.representation.FormParam can be used
  to access form-based parameters using the same rules as other parameter-based
  annotatons.
  Form-based resource methods MUST contain only annotated method parameters
  and at least one parameter MUST be annotated with FormParam.  
- Renamed com.sun.jersey.spi.service.Component.Scope enums from->to:
  WebApplication -> Singleton; and ApplicationDefined -> PerRequest
- Unified injection interfaces so that they are independent of where 
  injection occurs. See the package com.sun.jersey.spi.inject.
  - com.sun.jersey.spi.resource.Inject moved to com.sun.jersey.spi.inject.Inject
  - the com.sun.jersey.spi.inject.InjectableProvider behaves as a provider 
    class and may be annotated with @Provider.   
- Simple asynchronous client API returning Future<T>. Current implementation
  utilizes one thread per-request.
- Moved com.sun.ws.rest.impl.json.JSONJAXBContext to
  com.sun.jersey.api.json.JSONJAXBContext.
- Removed JAX-WS container.